# behavior_repeated_actions

./: .gitignore  pyproject.toml
scripts/: eda.ipynb  preprocess_dataset.py
scripts/wandb_sweeps/: wandb_sweep.py
scripts/wandb_sweeps/sweep_configs/: features_sweep_config.json  window_length_sweep_config.json
src/behavior_repeated_actions_kaggle.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/bfrb/: collate_function.py  dataset.py  run.py  train_evaluate.py
src/bfrb/config/: config.py
src/bfrb/models/: SENet.py  _classifier_head.py  cnn_rnn.py  transformer.py
src/bfrb/utils/: model_loading.py
